SAK-45191: LESSONS: Export error NumberException when exporting IMS CC (#9108)